# audio-over-ble

./: .gitignore  README.md
firmware/xiao_ble_mic_stream/: CMakeLists.txt  app.overlay  build.sh  prj.conf
firmware/xiao_ble_mic_stream/src/: main.c
pc_client/: ble_audio_control.py  ble_audio_receiver.py  build_lc3_host.sh  build_opus_host.sh  lc3_codec.py  opus_codec.py  play_ble_audio.py  requirements.txt  setup_pc.sh
